--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel_time",
+  "name": "driving_time",
   "version": "0.0.1",
   "description": "A worker javascript script to compute travel times.",
   "dependencies": {
